--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
-<head> 
-</head> 
-<body>
-<h2>
-Ich bin reich!
-</h2>
-</body>
+  <head> 
+  </head> 
+  <body>
+    <h2>
+    Ich bin reich!
+    </h2>
+      <a href="tools.html"> Der Text auf den ich Klicke </a>
+  </body>
 </html>
