--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <h2>
     Ich bin reich!
     </h2>
-      <a href="tools.html"> Der Text auf den ich Klicke </a>
+      <a href="tool.html"> Der Text auf den ich Klicke </a>
   </body>
 </html>
