--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     Ich bin reich!
     </h2>
       <a href="tool.html"> Der Text auf den ich Klicke </a>
+      <a href="https://www.google.com/"> Google </a>
   </body>
 </html>
