--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     </h2>
       <a href="tool.html"> Der Text auf den ich Klicke </a>
     <br>
-      <a href="https://www.google.com/"> Google </a>
+      <a href="https://www.google.com/" target="_blank"> Google </a>
   </body>
 </html>
