--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
       <a href="tool.html"> Der Text auf den ich Klicke </a>
     <br>
       <a href="https://www.google.com/" target="_blank"> Google </a>
+    <br>
+      <a href="ordner/seite_1.html" target="_blank"> Neue Seite in Ordner </a>
   </body>
 </html>
