--- a/Labyrinth/punkt2.html
+++ b/Labyrinth/punkt2.html
@@ -6,6 +6,8 @@
     Punkt2!
     </h1>
     <br>
+    <a href="ziel.html"> Teleporter </a>
+    <br>
     <a href="punkt1.html"> Teleporter </a>
     <br>
     <a href="punkt2.html"> Teleporter </a>
