--- a/Labyrinth/start.html
+++ b/Labyrinth/start.html
@@ -6,11 +6,11 @@
     Start!
     </h1>
     <br>
-    <a href="start.html"> <img src="https://p.turbosquid.com/ts-thumb/xw/9nZBAF/tlQi5aY6/teleport_02/jpg/1414140557/600x600/fit_q87/ac3fd6eb4c1e44163f81dce84e46b7764c5aa3b7/teleport_02.jpg"> </a>
+    <a href="start.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
     <br>
-    <a href="punkt1.html"> Teleporter </a>
+    <a href="punkt1.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
     <br>
-    <a href="punkt2.html"> Teleporter </a>
+    <a href="punkt2.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
     <br>
     <a href="ziel.html"> <img src="https://images.obi.de/product/DE/1500x1500/597521_2.jpg"> </a>
   </body>
