--- a/Labyrinth/punkt1.html
+++ b/Labyrinth/punkt1.html
@@ -6,10 +6,10 @@
     Punkt1!
     </h1>
     <br>
-    <a href="punkt2.html"> Teleporter </a>
+    <a href="punkt2.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
     <br>
-    <a href="punkt1.html"> Teleporter </a>
+    <a href="punkt1.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
     <br>
-    <a href="start.html"> Teleporter </a>
+    <a href="start.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
   </body>
 </html>
