--- a/Labyrinth/punkt2.html
+++ b/Labyrinth/punkt2.html
@@ -6,12 +6,12 @@
     Punkt2!
     </h1>
     <br>
-    <a href="ziel.html"> Teleporter </a>
+    <a href="ziel.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
     <br>
-    <a href="punkt1.html"> Teleporter </a>
+    <a href="punkt1.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
     <br>
-    <a href="punkt2.html"> Teleporter </a>
+    <a href="punkt2.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
     <br>
-    <a href="start.html"> Teleporter </a>
+    <a href="start.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
   </body>
 </html>
