--- a/Labyrinth/ziel.html
+++ b/Labyrinth/ziel.html
@@ -5,5 +5,6 @@
     <h1>
     Ziel!
     </h1>
+    <img src="https://as2.ftcdn.net/v2/jpg/02/37/03/93/1000_F_237039383_ZpBkjEsmROwXqpiQsKPIpb1bfaYlNWlm.jpg">
   </body>
 </html>
