--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
       <a href="https://www.google.com/" target="_blank"> Google </a>
     <br>
       <a href="ordner/seite_1.html" target="_blank"> <img src="https://static.printler.com/cache/2/7/3/a/f/0/273af03a454a6e7360b197ea99eb9738384d955b.jpg"> </a>
+    <br>
+    <a href="labyrinth/Sart.html" target="_blank"> Labyrinth </a>
   </body>
 </html>
