--- a/Labyrinth/punkt3.html
+++ b/Labyrinth/punkt3.html
@@ -1,1 +1,15 @@
-
+<html>
+  <head> 
+  </head> 
+  <body>
+    <h1>
+    Punkt1!
+    </h1>
+    <br>
+    <a href="punkt2.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
+    <br>
+    <a href="punkt4.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
+    <br>
+    <a href="start.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
+  </body>
+</html>
