--- a/Labyrinth/punkt5.html
+++ b/Labyrinth/punkt5.html
@@ -1,2 +1,15 @@
+<html>
+  <head> 
+  </head> 
+  <body>
+    <h1>
+    Punkt2!
+    </h1>
+    <br>
+    <a href="punkt4.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
     <br>
     <a href="ziel.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
+    <br>
+    <a href="start.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
+  </body>
+</html>
