--- a/Labyrinth/ziel.html
+++ b/Labyrinth/ziel.html
@@ -5,6 +5,6 @@
     <h1>
     Ziel!
     </h1>
-    <img src="https://as2.ftcdn.net/v2/jpg/02/37/03/93/1000_F_237039383_ZpBkjEsmROwXqpiQsKPIpb1bfaYlNWlm.jpg">
+    <img src="https://ih1.redbubble.net/image.3675304270.0604/pp,504x498-pad,600x600,f8f8f8.jpg">
   </body>
 </html>
