--- a/Labyrinth/start.html
+++ b/Labyrinth/start.html
@@ -8,7 +8,7 @@
     <br>
     <a href="start.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
     <br>
-    <a href="punkt1.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
+    <a href="punkt1.html"> <img src="teleport_02.jpg" width="200" height="200"> </a> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="start.html"> geheimer Teleporter>
     <br>
     <a href="punkt2.html"> <img src="teleport_02.jpg" width="200" height="200"> </a>
     <br>
