--- a/tool.html
+++ b/tool.html
@@ -27,9 +27,9 @@
 
     <table>
       <tr>
-        <td>Eintrag1</th>
-        <td>Eintrag2</th>
-        <td>Eintrag3</th>
+        <th>Eintrag1</th>
+        <th>Eintrag2</th>
+        <th>Eintrag3</th>
       </tr>
           <tr>
         <td>Eintrag1</td>
