--- a/test.html
+++ b/test.html
@@ -2,8 +2,7 @@
   <head> 
   </head> 
   <body>
-    <span>text</span> 
-
-    mehr text 
+    <span style="display: block;">text</span> 
+    <span>mehr text</span>
   </body>
 </html>
