--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
   </head> 
   <body>
     <span style="display: block;">text</span> 
-    <span>mehr text</span>
+    <span style="display: block; color: blue;">mehr text</span>
+    <span>noch mehr text</span>
   </body>
 </html>
