--- a/test.html
+++ b/test.html
@@ -5,5 +5,11 @@
     <span style="display: block;">text</span> 
     <span style="display: block; color: blue;">mehr text</span>
     <span>noch mehr text</span>
+    <div style="display: inline;">
+      text div 
+    </div>
+    <div>
+      zweiter text div 
+    </div>
   </body>
 </html>
