--- a/test.html
+++ b/test.html
@@ -2,8 +2,13 @@
   <head> 
   </head> 
   <body>
+    <style>
+      div {
+        backround-color = "green";
+      }
+    </style>
     <span style="display: block;">text</span> 
-    <span style="display: block; color: blue;">mehr text</span>
+    <span style="display: block; color: blue;">mehr text. </span>
     <span>noch mehr text</span>
     <div style="display: inline;">
       text div 
