--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
   <body>
     <style>
       div {
-        backround-color = "green";
+        backround-color: green;
       }
     </style>
     <span style="display: block;">text</span> 
