--- a/test.html
+++ b/test.html
@@ -6,6 +6,9 @@
       div {
         backround-color: green;
       }
+      div {
+        backround-color: ff0000;
+      }
     </style>
     <span style="display: block;">text</span> 
     <span style="display: block; color: blue;">mehr text. </span>
