--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
         backround-color: green;
       }
       div {
-        backround-color: ff0000;
+        backround-color: #ff0000;
       }
     </style>
     <span style="display: block;">text</span> 
