--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
     <span style="display: block;">text</span> 
     <span style="display: block; color: blue;">mehr text. </span>
     <span>noch mehr text</span>
-    <div style="display: inline;">
+    <div style="display: inline; backround-color: yellow">
       text div 
     </div>
     <div>
