--- a/test.html
+++ b/test.html
@@ -4,16 +4,16 @@
   <body>
     <style>
       div {
-        backround-color: green;
+        background-color: green;
       }
       div {
-        backround-color: #ff0000;
+        background-color: #ff0000;
       }
     </style>
     <span style="display: block;">text</span> 
     <span style="display: block; color: blue;">mehr text. </span>
     <span>noch mehr text</span>
-    <div style="display: inline; backround-color: yellow">
+    <div style="display: inline; background-color: yellow">
       text div 
     </div>
     <div>
