--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
       div {
         background-color: green;
       }
-      div {
+      span {
         background-color: #ff0000;
       }
     </style>
