--- a/test.html
+++ b/test.html
@@ -13,7 +13,7 @@
     <span style="display: block;">text</span> 
     <span style="display: block; color: blue;">mehr text. </span>
     <span>noch mehr text</span>
-    <div style="display: inline; background-color: yellow padding: 5px">
+    <div style="display: inline; background-color: yellow; padding: 5px; border: 2px solod black; margin: 5px;">
       text div 
     </div>
     <div>
