--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
     <div style="display: inline; background-color: yellow; padding-left: 5px; border: 2px solid black; margin: 5px;">
       text div 
     </div>
-    <div>
+    <div style="width:100px; height:100px;">
       zweiter text div 
     </div>
   </body>
