--- a/test.html
+++ b/test.html
@@ -19,5 +19,10 @@
     <div style="width:100px; height:100px;">
       zweiter text div 
     </div>
+    <br>
+    <br>
+    <div style="width:100px; height:10px; background-color:red;"></div>
+    <div style="width:100px; height:10px; background-color:green;"></div>
+    <div style="width:100px; height:10px; background-color:blue;"></div>
   </body>
 </html>
