--- a/test.html
+++ b/test.html
@@ -21,8 +21,8 @@
     </div>
     <br>
     <br>
-    <div style="width:100px; height:10px; background-color:red;"></div>
-    <div style="width:100px; height:10px; background-color:green;"></div>
-    <div style="width:100px; height:10px; background-color:blue;"></div>
+    <div style="width:50px; height:10px; background-color:black;"></div>
+    <div style="width:50px; height:10px; background-color:red;"></div>
+    <div style="width:50px; height:10px; background-color:gold;"></div>
   </body>
 </html>
