--- a/test.html
+++ b/test.html
@@ -24,5 +24,10 @@
     <div style="width:50px; height:10px; background-color:black;"></div>
     <div style="width:50px; height:10px; background-color:red;"></div>
     <div style="width:50px; height:10px; background-color:gold;"></div>
+    <br>
+    <br>
+    <div style="width:50px; height:10px; background-color:red;"></div>
+    <div style="width:50px; height:10px; background-color:white;"></div>
+    <div style="width:50px; height:10px; background-color:blue;"></div>
   </body>
 </html>
