--- a/test.html
+++ b/test.html
@@ -24,10 +24,12 @@
     <div style="width:50px; height:10px; background-color:black;"></div>
     <div style="width:50px; height:10px; background-color:red;"></div>
     <div style="width:50px; height:10px; background-color:gold;"></div>
+    <br>
     <div style="width:50px; height:10px; background-color:red;"></div>
     <div style="width:50px; height:10px; background-color:white;"></div>
     <div style="width:50px; height:10px; background-color:blue;"></div>
-    <div style="display: inline; width:50px; height:10px; background-color:black;"></div>
+    <br>
+    <div style="width:50px; height:10px; background-color:black;"></div>
     <div style="width:50px; height:10px; background-color:red;"></div>
     <div style="width:50px; height:10px; background-color:gold;"></div>
   </body>
