--- a/test.html
+++ b/test.html
@@ -25,7 +25,7 @@
     <div style="width:50px; height:10px; background-color:red;"></div>
     <div style="width:50px; height:10px; background-color:gold;"></div>
     <br>
-    <div style="width:50px; height:10px; background-color:red;"></div>
+    <div style="display: inline; padding-right:50px; padding-top:10px; background-color:red;"></div>
     <div style="display: inline; padding-right:50px; padding-top:10px; background-color:black;"></div>
     <div style="width:50px; height:10px; background-color:white;"></div>
     <div style="display: inline; width:50px; height:10px; background-color:red;"></div>
