--- a/test.html
+++ b/test.html
@@ -27,9 +27,9 @@
     <br>
     <div style="display: inline; padding-right:50px; padding-top:10px; background-color:red;"></div>
     <div style="display: inline; padding-right:50px; padding-top:10px; background-color:black;"></div>
-    <div style="width:50px; height:10px; background-color:white;"></div>
-    <div style="display: inline; width:50px; height:10px; background-color:red;"></div>
-    <div style="width:50px; height:10px; background-color:blue;"></div>
-    <div style="display: inline; width:50px; height:10px; background-color:gold;"></div>
+    <div style="display: inline; padding-right:50px; padding-top:10px; background-color:white;"></div>
+    <div style="display: inline; padding-right:50px; padding-top:10px; background-color:red;"></div>
+    <div style="display: inline; padding-right:50px; padding-top:10px; background-color:blue;"></div>
+    <div style="display: inline; padding-right:50px; padding-top:10px; background-color:gold;"></div>
   </body>
 </html>
