--- a/test.html
+++ b/test.html
@@ -26,9 +26,9 @@
     <div style="width:50px; height:10px; background-color:gold;"></div>
     <br>
     <div style="display: inline-block; width:50px; height:10px; background-color:red;"></div>
-    <div style="display: inline-block; width:50px; height:10px; background-color:black;"></div><br>
+    <div style="display: block; width:50px; height:10px; background-color:black;"></div>
     <div style="display: inline-block; width:50px; height:10px; background-color:white;"></div>
-    <div style="display: inline-block; width:50px; height:10px; background-color:red;"></div><br>
+    <div style="display: block; width:50px; height:10px; background-color:red;"></div>
     <div style="display: inline-block; width:50px; height:10px; background-color:blue;"></div>
     <div style="display: inline-block; width:50px; height:10px; background-color:gold;"></div>
   </body>
