--- a/test.html
+++ b/test.html
@@ -25,11 +25,16 @@
     <div style="width:50px; height:10px; background-color:red;"></div>
     <div style="width:50px; height:10px; background-color:gold;"></div>
     <br>
-    <div style="display: inline-block; width:50px; height:10px; background-color:red;"></div>
-    <div style="display: block; width:50px; height:10px; background-color:black;"></div>
-    <div style="display: inline-block; width:50px; height:10px; background-color:white;"></div>
-    <div style="display: block; width:50px; height:10px; background-color:red;"></div>
-    <div style="display: inline-block; width:50px; height:10px; background-color:blue;"></div>
-    <div style="display: inline-block; width:50px; height:10px; background-color:gold;"></div>
+    <div style="display:inline-block">
+      <div style="width:50px; height:10px; background-color:red;"></div>
+      <div style="width:50px; height:10px; background-color:white;"></div>
+      <div style="width:50px; height:10px; background-color:blue;"></div>
+    </div>
+    <div style="display:inline-block">
+      <div style="width:50px; height:10px; background-color:black;"></div>
+      <div style="width:50px; height:10px; background-color:red;"></div>
+      <div style="width:50px; height:10px; background-color:gold;"></div>
+    </div>
+
   </body>
 </html>
