--- a/Github/review.html
+++ b/Github/review.html
@@ -26,7 +26,7 @@
     Insgesamt bin ich sehr zufrieden mit dem HTML-Unterricht. Es war nicht nur lehrreich, sondern auch inspirierend. Vielen Dank an das gesamte Team für die hervorragende Arbeit und die Möglichkeit, meine Fähigkeiten im Bereich Webentwicklung zu verbessern. <br>
     Mit freundlichen Grüßen,<br>
     [Dein Name] <br>
-		<img src="lachende-studenten-50947687.webp" width="400" height="200">
+		<img src="lachende-studenten-50947687.webp" width="400" height="200" class="center">
 	</article>
 	<aside>
 		
