--- a/Github/review.html
+++ b/Github/review.html
@@ -10,6 +10,9 @@
 	</header>
 	<nav>
 		<a href="https://r.mtdv.me/socials">HILFE </a>
+		<a href="https://www.google.com/">Google </a>
+		<a href="https://discord.com/"Discord>Discord </a>
+		<a href="https://www.youtube.com/">Youtube </a>
 	</nav>
 	<section>
 	  Das Review : 
