--- a/Github/review.html
+++ b/Github/review.html
@@ -9,11 +9,11 @@
 		Objektives review des HTML Unterrichts. 
 	</header>
 	<nav>
-		<a href="https://r.mtdv.me/socials">HILFE </a>
-		<a href="https://www.google.com/">Google </a>
-		<a href="https://discord.com/"Discord>Discord </a>
-		<a href="https://www.youtube.com/">Youtube </a>
-		<a href=index.html>Index </a>
+		<a href="https://r.mtdv.me/socials">HILFE </a> <br>
+		<a href="https://www.google.com/">Google </a> <br>
+		<a href="https://discord.com/"Discord>Discord </a> <br>
+		<a href="https://www.youtube.com/">Youtube </a> <br>
+		<a href=index.html>Index </a> <br>
 	</nav>
 	<section>
 	  Das Review : 
