--- a/index.html
+++ b/index.html
@@ -16,5 +16,7 @@
       <a href="ordner/seite_1.html" target="_blank"> <img src="https://static.printler.com/cache/2/7/3/a/f/0/273af03a454a6e7360b197ea99eb9738384d955b.jpg"> </a>
     <br>
     <a href="Labyrinth/start.html" target="_blank"> Labyrinth </a>
+    <br>
+    <a href="Weihnachten.html" target="blank"> Weihnachten </a>
   </body>
 </html>
