--- a/Weihnachten.html
+++ b/Weihnachten.html
@@ -4,6 +4,7 @@
 <title> Weihnachten </title>
 </head>
 <body>
-<img class="Schneemann" src="https://t3.ftcdn.net/jpg/02/98/03/22/360_F_298032209_YD4pFLDyzMyqBzso5xF5USR05hxqGuXf.jpg">
+<img class="Schneemann" src="https://t3.ftcdn.net/jpg/02/98/03/22/360_F_298032209_YD4pFLDyzMyqBzso5xF5USR05hxqGuXf.jpg"/>
+<img class="Weihnachtsmann" src="https://img.freepik.com/vektoren-premium/weihnachtsmann-schlitten-ein-rentier-cartoon-clipart_576561-3939.jpg?w=740"/>
 </body>
 </html>
