--- a/Weihnachten.html
+++ b/Weihnachten.html
@@ -4,7 +4,8 @@
 <title> Weihnachten </title>
 </head>
 <body>
-<img class="Schneemann" src="https://t3.ftcdn.net/jpg/02/98/03/22/360_F_298032209_YD4pFLDyzMyqBzso5xF5USR05hxqGuXf.jpg"/>
-<img class="Weihnachtsmann" src="https://img.freepik.com/vektoren-premium/weihnachtsmann-schlitten-ein-rentier-cartoon-clipart_576561-3939.jpg?w=740"/>
+<div class="main">
+<img class="Weihnachtsmann" src="https://creazilla-store.fra1.digitaloceanspaces.com/cliparts/7814370/santa-claus-clipart-md.png">
+</div>
 </body>
 </html>
