--- a/index.html
+++ b/index.html
@@ -18,5 +18,9 @@
     <a href="Labyrinth/start.html" target="_blank"> Labyrinth </a>
     <br>
     <a href="Weihnachten.html" target="blank"> Weihnachten </a>
+    <br>
+    <a href="Github/UsabilityExample_Luis_Ott.html" target="blank"> Usability </a>
+    <br>
+    <a href="Pond.html" target="blank"> Flex-Boxen </a>
   </body>
 </html>
