--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <br>
     <a href="Github/UsabilityExample_Luis_Ott.html" target="blank"> Usability </a>
     <br>
-    <a href="Pond.html" target="blank"> Flex-Boxen </a>
+    <a href="Github/Pond.html" target="blank"> Flex-Boxen </a>
+    <br>
+    <a href="Github/Responsive.html" target="blank"> Responsivness </a>
   </body>
 </html>
