--- a/index.html
+++ b/index.html
@@ -24,5 +24,7 @@
     <a href="Github/Pond.html" target="blank"> Flex-Boxen </a>
     <br>
     <a href="Github/Responsive.html" target="blank"> Responsivness </a>
+    <br>
+    <a href="TuningShop/index.html" target="blank"> Projekt </a>
   </body>
 </html>
