--- a/TuningShop/index.html
+++ b/TuningShop/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class = "nav">
-      <a href="" id="wrap">ChromeRev</a>
+      <a href="index.html" id="wrap">ChromeRev</a>
       <a href="" id="wrap">Anmelden</a>
       <a href="" id="wrap">Kontakt</a>
       <a href="Warenkorb.html" id="wrap">Warenkorp</a>
