--- a/TuningShop/Warenkorb.html
+++ b/TuningShop/Warenkorb.html
@@ -6,12 +6,14 @@
     </title>
   </head>
   <body>
-    <div class = "nav">
-      <a href="" id="wrap">ChromeRev</a>
-      <a href="" id="wrap">Anmelden</a>
-      <a href="" id="wrap">Kontakt</a>
-      <a href="" id="wrap">Warenkorb</a>
-    </div>
+    <nav>
+        <div class = "nav">
+            <a href="index.html" id="wrap">ChromeRev</a>
+            <a href="" id="wrap">Anmelden</a>
+            <a href="" id="wrap">Kontakt</a>
+            <a href="Warenkorb.html" id="wrap">Warenkorb</a>
+        </div>
+    </nav>
     <h2>Syle in jeder Umdrehung</h2>
     <div class="filler">
         <div class="fullWidth"><h3>Einkaufswagen</h3></div>
