--- a/TuningShop/Warenkorb.html
+++ b/TuningShop/Warenkorb.html
@@ -23,23 +23,28 @@
         <div class="produkt" id="pro">
             <img src="LED rgb Felge.jpg" alt="LED rgb Felge"/>
         </div>
-        <div>
-            <h5 class="inline">RGB Felgen | HighTech 50 Lumen 90 Zoll 7.2 LED 5k super power xfth</h5><div class="preis"><h5>12.000€</h5></div>
-            <p>auf Lager</p><br><br><br><br>
+        <div class="f">
+            <h5 class="inline">RGB Felgen | HighTech 50 Lumen 90 Zoll 7.2 LED 5k super</h5><h5>12.000€</h5>
+          <div class="d">
+            <p>auf Lager</p><br><br><br>
             <p>Dies it ein Geschenk <a href="">mehr erfahren</a></p>
             <p>In monatlichen Raten Zahlen <a href="">mehr erfahren</a></p>
+          </div>
         </div>
         <div class="produkt">
             <img src="moderneFelge.jpg" alt="futuristische Felge"/>
         </div>
-        <div>
-            <h5 class="inline">futuristische Felgen | Designer Felgen 90 Zoll 7.2 h4 M67G3</h5><h5 class="preis">12.000€</h5>
-            <p>auf Lager</p><br><br><br><br>
+        <div class="f">
+            <h5 class="inline">futuristische Felgen | Designer Felgen 90 Zoll 7.2 h4 M67G3</h5><h5>17.000€</h5>
+          <div class="d">
+            <p>auf Lager</p><br><br><br>
             <p>Dies it ein Geschenk <a href="">mehr erfahren</a></p>
             <p>In monatlichen Raten Zahlen <a href="">mehr erfahren</a></p>
+          </div>
+        </div>
         </div>
         <div class="r">
-            <h5 class="inline">Gesammtpreis: </h5><div class="preisG"><h5>24.000€</h5></div>
+            <h5 class="inline">Gesammtpreis: </h5><div><h5>29.000€</h5></div>
         </div>
         <div class="r"><a href="" id="button">Zur Kasse gehen</a></div>
     </div>
