--- a/TuningShop/index.html
+++ b/TuningShop/index.html
@@ -6,22 +6,24 @@
     </title>
   </head>
   <body>
-    <div class = "nav">
-      <a href="index.html" id="wrap">ChromeRev</a>
-      <a href="" id="wrap">Anmelden</a>
-      <a href="" id="wrap">Kontakt</a>
-      <a href="Warenkorb.html" id="wrap">Warenkorp</a>
-    </div>
+    <nav>
+      <div class = "nav">
+          <a href="index.html" id="wrap">ChromeRev</a>
+          <a href="Anmelden.html" id="wrap">Anmelden</a>
+          <a href="Support.html" id="wrap">Support</a>
+          <a href="Warenkorb.html" id="wrap">Warenkorb</a>
+      </div>
+    </nav>
     <h2>Syle in jeder Umdrehung</h2>
-    <div class = "bild1" id="bild">
+    <div class = "bild1" id="bild" alt="Logo von ChromeRev: bunte Felgen im Sand aufgestellt mit ChomeRev Schriftzug">
       <img src="pfeilR.png" class="btn" id="eins" onclick="this.parentElement.style.display='none';drei.parentElement.style.display='flex';"/>
       <img src="pfeil.png" class="btn2" onclick="this.parentElement.style.display='none';zwei.parentElement.style.display='flex';"/>
     </div>
-    <div class = "bild2" id="bild">
+    <div class = "bild2" id="bild" alt="Gif: Kind im Spielzeugauto Driftet aus eine Einfahrt">
       <img src="pfeilR.png" class="btn" id="zwei" onclick="this.parentElement.style.display='none';eins.parentElement.style.display='flex';"/>
       <img src="pfeil.png" class="btn2" onclick="this.parentElement.style.display='none';drei.parentElement.style.display='flex';"/>
     </div>
-    <div class = "bild3" id="bild">
+    <div class = "bild3" id="bild" alt="Kolbenrueckholfedern in rot blau und lila">
       <div class="obenBanner"><h1>Jetzt Neu!</h1></div>
       <div class="untenBanner"><h1>Kolbenrueckholfedern</h1></div>
       <img src="pfeilR.png" class="btn" id="drei" onclick="this.parentElement.style.display='none';zwei.parentElement.style.display='flex';"/>
@@ -29,28 +31,28 @@
     </div>
     <div class="Angebote">
       <div class="filler">
-        <div class="fullWidth"><h3>Neue Produkte</h3></div>
+        <div class="fullWidth"><h3>Jetzt Neu</h3></div>
         <div class="fullWidthR"><h5><a href="">Mehr Ansehen</a></h5></div>
       </div>
-      <div class="produkt" alt="LED rgb Felge">
+      <div class="produkt" alt="eine Felge mit rgb LED ">
         <h5>&nbsp;&nbsp;&nbsp;RGB Felgen</h5>
         <img src="LED rgb Felge.jpg"/>
       </div>
-      <div class="produkt" alt="futuristische Felge">
+      <div class="produkt" alt="eine Felge im futuristischem Stil">
         <h5>&nbsp;&nbsp;&nbsp;futuristische Felgen</h5>
         <img src="moderneFelge.jpg"/>
       </div>
-      <div class="produkt">
-        <h5>&nbsp;&nbsp;&nbsp;RGB Felgen</h5>
-        <img src="LED rgb Felge.jpg"/>
+      <div class="produkt" alt="Kolbenrueckholfedern in rot blau und lila">
+        <h5>&nbsp;&nbsp;&nbsp;Kolbenrueckholfedern</h5>
+        <img src="Tuning-Kolbenruckholfeder.jpg"/>
       </div>
       <div class="filler">
-        <div class="fullWidth"><h3>Neue Produkte</h3></div>
+        <div class="fullWidth"><h3>Für Sie</h3></div>
         <div class="fullWidthR"><h5><a href="">Mehr Ansehen</a></h5></div>
       </div>
-      <div class="produkt">
-        <h5>&nbsp;&nbsp;&nbsp;RGB Felgen</h5>
-        <img src="LED rgb Felge.jpg"/>
+      <div class="produkt" alt="Eine Tüte Getriebesand rot">
+        <h5>&nbsp;&nbsp;&nbsp;Getriebesand</h5>
+        <img src="Getriebesand.jpg"/>
       </div>
       <div class="produkt">
         <h5>&nbsp;&nbsp;&nbsp;RGB Felgen</h5>
@@ -61,39 +63,7 @@
         <img src="LED rgb Felge.jpg"/>
       </div>
       <div class="filler">
-        <div class="fullWidth"><h3>Neue Produkte</h3></div>
-        <div class="fullWidthR"><h5><a href="">Mehr Ansehen</a></h5></div>
-      </div>
-      <div class="produkt">
-        <h5>&nbsp;&nbsp;&nbsp;RGB Felgen</h5>
-        <img src="LED rgb Felge.jpg"/>
-      </div>
-      <div class="produkt">
-        <h5>&nbsp;&nbsp;&nbsp;RGB Felgen</h5>
-        <img src="LED rgb Felge.jpg"/>
-      </div>
-      <div class="produkt">
-        <h5>&nbsp;&nbsp;&nbsp;RGB Felgen</h5>
-        <img src="LED rgb Felge.jpg"/>
-      </div>
-      <div class="filler">
-        <div class="fullWidth"><h3>Neue Produkte</h3></div>
-        <div class="fullWidthR"><h5><a href="">Mehr Ansehen</a></h5></div>
-      </div>
-      <div class="produkt">
-        <h5>&nbsp;&nbsp;&nbsp;RGB Felgen</h5>
-        <img src="LED rgb Felge.jpg"/>
-      </div>
-      <div class="produkt">
-        <h5>&nbsp;&nbsp;&nbsp;RGB Felgen</h5>
-        <img src="LED rgb Felge.jpg"/>
-      </div>
-      <div class="produkt">
-        <h5>&nbsp;&nbsp;&nbsp;RGB Felgen</h5>
-        <img src="LED rgb Felge.jpg"/>
-      </div>
-      <div class="filler">
-        <div class="fullWidth"><h3>Neue Produkte</h3></div>
+        <div class="fullWidth"><h3>Derzeit Beliebt</h3></div>
         <div class="fullWidthR"><h5><a href="">Mehr Ansehen</a></h5></div>
       </div>
       <div class="produkt">
@@ -123,7 +93,7 @@
           <a>Datenschutz</a>
         </li>
         <li>
-          <a>Support</a>
+          <a>Quellen</a>
         </li>
       </ul>
       <ul>
