--- a/TuningShop/Warenkorb.html
+++ b/TuningShop/Warenkorb.html
@@ -7,12 +7,12 @@
   </head>
   <body>
     <nav>
-        <div class = "nav">
-            <a href="index.html" id="wrap">ChromeRev</a>
-            <a href="" id="wrap">Anmelden</a>
-            <a href="" id="wrap">Kontakt</a>
-            <a href="Warenkorb.html" id="wrap">Warenkorb</a>
-        </div>
+      <div class = "nav">
+          <a href="index.html" id="wrap">ChromeRev</a>
+          <a href="Anmelden.html" id="wrap">Anmelden</a>
+          <a href="Support.html" id="wrap">Support</a>
+          <a href="Warenkorb.html" id="wrap">Warenkorb</a>
+      </div>
     </nav>
     <h2>Syle in jeder Umdrehung</h2>
     <div class="filler">
@@ -26,7 +26,7 @@
         <div class="f">
             <h5 class="inline">RGB Felgen | HighTech 50 Lumen 90 Zoll 7.2 LED 5k super</h5><h5>12.000€</h5>
           <div class="d">
-            <p>auf Lager</p><br><br><br>
+            <p>auf Lager</p><br><br><br><br>
             <p>Dies it ein Geschenk <a href="">mehr erfahren</a></p>
             <p>In monatlichen Raten Zahlen <a href="">mehr erfahren</a></p>
           </div>
@@ -37,7 +37,7 @@
         <div class="f">
             <h5 class="inline">futuristische Felgen | Designer Felgen 90 Zoll 7.2 h4 M67G3</h5><h5>17.000€</h5>
           <div class="d">
-            <p>auf Lager</p><br><br><br>
+            <p>auf Lager</p><br><br><br><br>
             <p>Dies it ein Geschenk <a href="">mehr erfahren</a></p>
             <p>In monatlichen Raten Zahlen <a href="">mehr erfahren</a></p>
           </div>
@@ -62,7 +62,7 @@
           <a>Datenschutz</a>
         </li>
         <li>
-          <a>Support</a>
+          <a>Quellen</a>
         </li>
       </ul>
       <ul>
