--- a/TuningShop/index.html
+++ b/TuningShop/index.html
@@ -37,14 +37,17 @@
       <div class="produkt" alt="eine Felge mit rgb LED ">
         <h5>&nbsp;&nbsp;&nbsp;RGB Felgen</h5>
         <img src="LED rgb Felge.jpg"/>
+        <h5>&nbsp;&nbsp;&nbsp;12.000€</h5>
       </div>
       <div class="produkt" alt="eine Felge im futuristischem Stil">
         <h5>&nbsp;&nbsp;&nbsp;futuristische Felgen</h5>
         <img src="moderneFelge.jpg"/>
+        <h5>&nbsp;&nbsp;&nbsp;17.000€</h5>
       </div>
       <div class="produkt" alt="Kolbenrueckholfedern in rot blau und lila">
         <h5>&nbsp;&nbsp;&nbsp;Kolbenrueckholfedern</h5>
         <img src="Tuning-Kolbenruckholfeder.jpg"/>
+        <h5>&nbsp;&nbsp;&nbsp;6.000€</h5>
       </div>
       <div class="filler">
         <div class="fullWidth"><h3>Für Sie</h3></div>
@@ -53,30 +56,36 @@
       <div class="produkt" alt="Eine Tüte Getriebesand rot">
         <h5>&nbsp;&nbsp;&nbsp;Getriebesand</h5>
         <img src="Getriebesand.jpg"/>
+        <h5>&nbsp;&nbsp;&nbsp;400€</h5>
       </div>
-      <div class="produkt">
-        <h5>&nbsp;&nbsp;&nbsp;RGB Felgen</h5>
-        <img src="LED rgb Felge.jpg"/>
+      <div class="produkt" alt="Eine Handliche Bodenblechsaege">
+        <h5>&nbsp;&nbsp;&nbsp;Bodenblechsaege</h5>
+        <img src="Bodenblechsage.jpg"/>
+        <h5>&nbsp;&nbsp;&nbsp;2.400€</h5>
       </div>
-      <div class="produkt">
-        <h5>&nbsp;&nbsp;&nbsp;RGB Felgen</h5>
-        <img src="LED rgb Felge.jpg"/>
+      <div class="produkt" alt="Eine Spritze zur NitroEinspritzung">
+        <h5>&nbsp;&nbsp;&nbsp;NitroEinspritzung</h5>
+        <img src="NitroEinspritzung.jpg"/>
+        <h5>&nbsp;&nbsp;&nbsp;3.100€</h5>
       </div>
       <div class="filler">
         <div class="fullWidth"><h3>Derzeit Beliebt</h3></div>
         <div class="fullWidthR"><h5><a href="">Mehr Ansehen</a></h5></div>
       </div>
-      <div class="produkt">
-        <h5>&nbsp;&nbsp;&nbsp;RGB Felgen</h5>
-        <img src="LED rgb Felge.jpg"/>
+      <div class="produkt" alt="1 Fresskerze, 1 Racing Luftfilter in Premiumqualität, 1 Packung Getriebesand, 1 Dose Vergaserschlamm, 1 Ölwannenschlüssel und ein Auffangbehälter um das vorhandene Motoröl abzulassen">
+        <h5>&nbsp;&nbsp;&nbsp;Kolbenfresser-Kit</h5>
+        <img src="Kolbenfresser-Kit.jpg"/>
+        <h5>&nbsp;&nbsp;&nbsp;1.000€</h5>
       </div>
-      <div class="produkt">
-        <h5>&nbsp;&nbsp;&nbsp;RGB Felgen</h5>
-        <img src="LED rgb Felge.jpg"/>
+      <div class="produkt" alt="Ein Karton mit 6 Tuningdruckluft-Kapseln">
+        <h5>&nbsp;&nbsp;&nbsp;Tuningdruckluft-Kapseln</h5>
+        <img src="Tuningdruckluft-Kapseln.jpg"/>
+        <h5>&nbsp;&nbsp;&nbsp;600€</h5>
       </div>
-      <div class="produkt">
-        <h5>&nbsp;&nbsp;&nbsp;RGB Felgen</h5>
-        <img src="LED rgb Felge.jpg"/>
+      <div class="produkt" alt="Ein Turbo mit Turboloch-Deckel">
+        <h5>&nbsp;&nbsp;&nbsp;Turboloch-Deckel</h5>
+        <img src="Turboloch-Deckel.jpg"/>
+        <h5>&nbsp;&nbsp;&nbsp;3.700€</h5>
       </div>
     </div>
   </body>
