--- a/TuningShop/index.html
+++ b/TuningShop/index.html
@@ -16,18 +16,18 @@
     </nav>
     <h2>Syle in jeder Umdrehung</h2>
     <div class = "bild1" id="bild" alt="Logo von ChromeRev: bunte Felgen im Sand aufgestellt mit ChomeRev Schriftzug">
-      <img src="pfeilR.png" class="btn" id="eins" onclick="this.parentElement.style.display='none';drei.parentElement.style.display='flex';"/>
-      <img src="pfeil.png" class="btn2" onclick="this.parentElement.style.display='none';zwei.parentElement.style.display='flex';"/>
+      <img src="Bilder/pfeilR.png" class="btn" id="eins" onclick="this.parentElement.style.display='none';drei.parentElement.style.display='flex';"/>
+      <img src="Bilder/pfeil.png" class="btn2" onclick="this.parentElement.style.display='none';zwei.parentElement.style.display='flex';"/>
     </div>
     <div class = "bild2" id="bild" alt="Gif: Kind im Spielzeugauto Driftet aus eine Einfahrt">
-      <img src="pfeilR.png" class="btn" id="zwei" onclick="this.parentElement.style.display='none';eins.parentElement.style.display='flex';"/>
-      <img src="pfeil.png" class="btn2" onclick="this.parentElement.style.display='none';drei.parentElement.style.display='flex';"/>
+      <img src="Bilder/pfeilR.png" class="btn" id="zwei" onclick="this.parentElement.style.display='none';eins.parentElement.style.display='flex';"/>
+      <img src="Bilder/pfeil.png" class="btn2" onclick="this.parentElement.style.display='none';drei.parentElement.style.display='flex';"/>
     </div>
     <div class = "bild3" id="bild" alt="Kolbenrueckholfedern in rot blau und lila">
       <div class="obenBanner"><h1>Jetzt Neu!</h1></div>
       <div class="untenBanner"><h1>Kolbenrueckholfedern</h1></div>
-      <img src="pfeilR.png" class="btn" id="drei" onclick="this.parentElement.style.display='none';zwei.parentElement.style.display='flex';"/>
-      <img src="pfeil.png" class="btn2" onclick="this.parentElement.style.display='none';eins.parentElement.style.display='flex';"/>
+      <img src="Bilder/pfeilR.png" class="btn" id="drei" onclick="this.parentElement.style.display='none';zwei.parentElement.style.display='flex';"/>
+      <img src="Bilder/pfeil.png" class="btn2" onclick="this.parentElement.style.display='none';eins.parentElement.style.display='flex';"/>
     </div>
     <div class="Angebote">
       <div class="filler">
@@ -36,17 +36,17 @@
       </div>
       <div class="produkt" alt="eine Felge mit rgb LED ">
         <h5>&nbsp;&nbsp;&nbsp;RGB Felgen</h5>
-        <img src="LED rgb Felge.jpg"/>
+        <img src="Bilder/LED rgb Felge.jpg"/>
         <h5>&nbsp;&nbsp;&nbsp;12.000€</h5>
       </div>
       <div class="produkt" alt="eine Felge im futuristischem Stil">
         <h5>&nbsp;&nbsp;&nbsp;futuristische Felgen</h5>
-        <img src="moderneFelge.jpg"/>
+        <img src="Bilder/moderneFelge.jpg"/>
         <h5>&nbsp;&nbsp;&nbsp;17.000€</h5>
       </div>
       <div class="produkt" alt="Kolbenrueckholfedern in rot blau und lila">
         <h5>&nbsp;&nbsp;&nbsp;Kolbenrueckholfedern</h5>
-        <img src="Tuning-Kolbenruckholfeder.jpg"/>
+        <img src="Bilder/Tuning-Kolbenruckholfeder.jpg"/>
         <h5>&nbsp;&nbsp;&nbsp;6.000€</h5>
       </div>
       <div class="filler">
@@ -55,17 +55,17 @@
       </div>
       <div class="produkt" alt="Eine Tüte Getriebesand rot">
         <h5>&nbsp;&nbsp;&nbsp;Getriebesand</h5>
-        <img src="Getriebesand.jpg"/>
+        <img src="Bilder/Getriebesand.jpg"/>
         <h5>&nbsp;&nbsp;&nbsp;400€</h5>
       </div>
       <div class="produkt" alt="Eine Handliche Bodenblechsaege">
         <h5>&nbsp;&nbsp;&nbsp;Bodenblechsaege</h5>
-        <img src="Bodenblechsage.jpg"/>
+        <img src="Bilder/Bodenblechsage.jpg"/>
         <h5>&nbsp;&nbsp;&nbsp;2.400€</h5>
       </div>
       <div class="produkt" alt="Eine Spritze zur NitroEinspritzung">
         <h5>&nbsp;&nbsp;&nbsp;NitroEinspritzung</h5>
-        <img src="NitroEinspritzung.jpg"/>
+        <img src="Bilder/NitroEinspritzung.jpg"/>
         <h5>&nbsp;&nbsp;&nbsp;3.100€</h5>
       </div>
       <div class="filler">
@@ -74,17 +74,17 @@
       </div>
       <div class="produkt" alt="1 Fresskerze, 1 Racing Luftfilter in Premiumqualität, 1 Packung Getriebesand, 1 Dose Vergaserschlamm, 1 Ölwannenschlüssel und ein Auffangbehälter um das vorhandene Motoröl abzulassen">
         <h5>&nbsp;&nbsp;&nbsp;Kolbenfresser-Kit</h5>
-        <img src="Kolbenfresser-Kit.jpg"/>
+        <img src="Bilder/Kolbenfresser-Kit.jpg"/>
         <h5>&nbsp;&nbsp;&nbsp;1.000€</h5>
       </div>
       <div class="produkt" alt="Ein Karton mit 6 Tuningdruckluft-Kapseln">
         <h5>&nbsp;&nbsp;&nbsp;Tuningdruckluft-Kapseln</h5>
-        <img src="Tuningdruckluft-Kapseln.jpg"/>
+        <img src="Bilder/Tuningdruckluft-Kapseln.jpg"/>
         <h5>&nbsp;&nbsp;&nbsp;600€</h5>
       </div>
       <div class="produkt" alt="Ein Turbo mit Turboloch-Deckel">
         <h5>&nbsp;&nbsp;&nbsp;Turboloch-Deckel</h5>
-        <img src="Turboloch-Deckel.jpg"/>
+        <img src="Bilder/Turboloch-Deckel.jpg"/>
         <h5>&nbsp;&nbsp;&nbsp;3.700€</h5>
       </div>
     </div>
