--- a/TuningShop/Warenkorb.html
+++ b/TuningShop/Warenkorb.html
@@ -21,7 +21,7 @@
     </div>
     <div class="waren">
         <div class="produkt" id="pro">
-            <img src="LED rgb Felge.jpg" alt="LED rgb Felge"/>
+            <img src="Bilder/LED rgb Felge.jpg" alt="LED rgb Felge"/>
         </div>
         <div class="f">
             <h5 class="inline">RGB Felgen | HighTech 50 Lumen 90 Zoll 7.2 LED 5k super</h5><h5>12.000€</h5>
@@ -32,7 +32,7 @@
           </div>
         </div>
         <div class="produkt">
-            <img src="moderneFelge.jpg" alt="futuristische Felge"/>
+            <img src="Bilder/moderneFelge.jpg" alt="futuristische Felge"/>
         </div>
         <div class="f">
             <h5 class="inline">futuristische Felgen | Designer Felgen 90 Zoll 7.2 h4 M67G3</h5><h5>17.000€</h5>
