--- a/JSC/Cookies.html
+++ b/JSC/Cookies.html
@@ -13,7 +13,7 @@
                 a = (document.cookie=prompt("User:"));
             }
             function leseCookie(){
-                alert(document.cookie)
+                alert(a)
             }
             function speicherCookie(){
                 d = new Date();
